--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
     "node": ">=10.9 <10.10"
   },
   "dependencies": {
+    "@keycloak/keycloak-admin-client": "^15.0.2",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
     "@types/immutable": "^3.8.7",
-    "@types/lodash": "^4.14.120",
+    "@types/lodash": "^4.14.175",
     "@types/mime-types": "^2.1.0",
     "@types/moment": "^2.13.0",
     "@types/node": "^14.6.0",
@@ -71,14 +72,13 @@
     "jimp": "^0.16.0",
     "keycloak-connect": "^8.0.0",
     "knex": "^0.19.3",
-    "lodash": "^4.17.21",
     "mime-types": "^2.1.22",
     "module-alias": "^2.2.2",
     "moment": "^2.24.0",
     "multiparty": "^4.2.1",
     "nodemailer": "^6.6.1",
     "openid-client": "^3.15.9",
-    "pg": "^7.12.1",
+    "pg": "^8.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "sha.js": "^2.4.11",
@@ -130,7 +130,7 @@
     "markdown-toc": "^1.2.0",
     "mocha": "^7.1.1",
     "moment-timezone": "^0.5.23",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.0",
     "nodemon": "^2.0.4",
     "path-to-regexp": "^6.1.0",
     "pathmodify": "^0.5.0",
