--- a/package.json
+++ b/package.json
@@ -43,11 +43,12 @@
     "node": ">=16.13.1"
   },
   "dependencies": {
+    "@keycloak/keycloak-admin-client": "^15.0.2",
     "@types/cookie-parser": "^1.4.1",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
     "@types/immutable": "^3.8.7",
-    "@types/lodash": "^4.14.120",
+    "@types/lodash": "^4.14.175",
     "@types/mime-types": "^2.1.0",
     "@types/moment": "^2.13.0",
     "@types/node": "^14.6.0",
@@ -69,7 +70,6 @@
     "jimp": "^0.16.0",
     "keycloak-connect": "^8.0.0",
     "knex": "^0.19.3",
-    "lodash": "^4.17.21",
     "mime-types": "^2.1.22",
     "module-alias": "^2.2.2",
     "moment": "^2.24.0",
