fix: updates required envs to sample.env

--- a/sample.env
+++ b/sample.env
@@ -3,11 +3,16 @@ SERVER_HOST="0.0.0.0"
 SERVER_PORT="3000"
 POSTGRES_URL=""
 COOKIE_SECRET="foobar"
-ORIGIN="http://realfolk.test:3000"
-KEYCLOAK_CLIENT_ID="dm-auth-web"
-KEYCLOAK_CLIENT_SECRET=""
-KEYCLOAK_URL="https://sso-dev.pathfinder.gov.bc.ca"
-KEYCLOAK_REALM="p2zhow64"
+ORIGIN="http://localhost:3000"
+KEYCLOAK_CLIENT_ID="login"
+KEYCLOAK_CLIENT_SECRET="abc-123"
+KEYCLOAK_URL="http://localhost:8080"
+KEYCLOAK_USERNAME="admin"
+KEYCLOAK_PASSWORD="password"
+KEYCLOAK_REALM="digitalmarketplace"
+ID_PROVIDER="github"
+ID_PROVIDER_CLIENT_ID=""
+ID_PROVIDER_CLIENT_SECRET=""
 FILE_STORAGE_DIR="./tmp"
 CONTACT_EMAIL=""
 SCHEDULED_DOWNTIME=""
