fix: fixes typos in variable names

--- a/sample.env
+++ b/sample.env
@@ -7,7 +7,7 @@ ORIGIN="http://localhost:3000"
 KEYCLOAK_CLIENT_ID="login"
 KEYCLOAK_CLIENT_SECRET="abc-123"
 KEYCLOAK_URL="http://localhost:8080"
-KEYCLOAK_USERNAME="admin"
+KEYCLOAK_USER="admin"
 KEYCLOAK_PASSWORD="password"
 KEYCLOAK_REALM="digitalmarketplace"
 ID_PROVIDER="github"
