--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -37,7 +37,7 @@
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "yarn install",
-	"postCreateCommand": "npm install | npm run migrations:latest",
+	"postCreateCommand": "npm install && npm run migrations:latest",
   // "postStartCommand": "/keycloak-${KC_VERSION}/bin/standalone.sh",
 
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
