--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,13 +26,12 @@ jobs:
       - run: npm ci
       - run: npm run front-end:lint
       - run: npm run back-end:lint
-  build:
+  audit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: '10'
       - run: npm ci
-      - run: npm run front-end:build
-      - run: npm run back-end:build
+      - run: npm audit --audit-level=moderate
