--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@typescript-eslint/parser": "^5.5.0",
     "autoprefixer": "^9.4.4",
     "axios": "^0.21.1",
+    "better-npm-audit": "^3.5.1",
     "bootstrap": "4.4.1",
     "cssnano": "^4.1.10",
     "envify": "^4.1.0",
