--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Digital Marketplace",
   "main": "index.js",
   "scripts": {
+    "audit": "better-npm-audit audit",
     "start": "npm run back-end:start",
     "front-end:lint": "npx tslint -c tslint.json src/front-end/*.ts src/front-end/**/*.ts && echo Lint Successful\n",
     "front-end:typecheck": "npx tsc --project src/front-end/typescript --noEmit && echo Typecheck Successful\n",
