--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,8 @@
+- repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
+  rev: v2.2.0
+  hooks:
+      - id: commitlint
+        stages: [commit-msg]
 - repo: https://github.com/jorisroovers/gitlint
   rev: v0.12.0
   hooks:
