--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,5 +33,5 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '10'
-      - run: npm ci
+      - run: pip install pre-commit
       - run: pre-commit run --all-files
