--- a/package.json
+++ b/package.json
@@ -43,107 +43,107 @@
     "node": ">=16.13.1"
   },
   "dependencies": {
-    "@types/cookie-parser": "^1.4.1",
-    "@types/dotenv": "^6.1.0",
-    "@types/express": "^4.16.1",
-    "@types/immutable": "^3.8.7",
-    "@types/lodash": "^4.14.120",
-    "@types/mime-types": "^2.1.0",
-    "@types/moment": "^2.13.0",
-    "@types/node": "^14.6.0",
-    "@types/react": "^16.8.19",
-    "@types/react-dom": "^16.8.4",
-    "@types/uuid": "^3.4.5",
-    "@types/yargs": "^15.0.5",
-    "@wordpress/wordcount": "^2.7.0",
-    "body-parser": "^1.18.3",
-    "bowser": "^2.9.0",
-    "chalk": "^2.4.2",
-    "cookie-parser": "^1.4.4",
-    "cors": "^2.8.5",
-    "dotenv": "^6.2.0",
-    "express": "^4.16.4",
-    "find-up": "^5.0.0",
-    "html-to-text": "^5.1.1",
-    "immutable": "^4.0.0-rc.12",
-    "jimp": "^0.16.0",
-    "keycloak-connect": "^8.0.0",
-    "knex": "^0.19.3",
-    "lodash": "^4.17.21",
-    "mime-types": "^2.1.22",
-    "module-alias": "^2.2.2",
-    "moment": "^2.24.0",
-    "multiparty": "^4.2.1",
-    "nodemailer": "^6.6.1",
-    "openid-client": "^3.15.9",
-    "pg": "8.7.x",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "sha.js": "^2.4.11",
-    "swagger-jsdoc": "^4.0.0",
-    "swagger-ui-express": "^4.1.4",
-    "ts-node": "^8.5.4",
-    "tsconfig-paths": "^3.8.0",
+    "@types/cookie-parser": "1.4.2",
+    "@types/dotenv": "6.1.1",
+    "@types/express": "4.16.1",
+    "@types/immutable": "3.8.7",
+    "@types/lodash": "4.14.178",
+    "@types/mime-types": "2.1.1",
+    "@types/moment": "2.13.0",
+    "@types/node": "14.6.0",
+    "@types/react": "16.9.13",
+    "@types/react-dom": "16.9.4",
+    "@types/uuid": "3.4.6",
+    "@types/yargs": "15.0.5",
+    "@wordpress/wordcount": "2.7.0",
+    "body-parser": "1.19.0",
+    "bowser": "2.9.0",
+    "chalk": "2.4.2",
+    "cookie-parser": "1.4.6",
+    "cors": "2.8.5",
+    "dotenv": "6.2.0",
+    "express": "4.17.1",
+    "find-up": "5.0.0",
+    "html-to-text": "5.1.1",
+    "immutable": "4.0.0-rc.12",
+    "jimp": "0.16.0",
+    "keycloak-connect": "8.0.0",
+    "knex": "0.19.5",
+    "lodash": "4.17.21",
+    "mime-types": "2.1.34",
+    "module-alias": "2.2.2",
+    "moment": "2.24.0",
+    "multiparty": "4.2.2",
+    "nodemailer": "6.6.1",
+    "openid-client": "3.15.9",
+    "pg": "8.7.1",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "sha.js": "2.4.11",
+    "swagger-jsdoc": "4.0.0",
+    "swagger-ui-express": "4.1.4",
+    "ts-node": "8.5.4",
+    "tsconfig-paths": "3.9.0",
     "typescript": "3.7.4",
-    "uuid": "^3.3.3",
-    "yargs": "^16.0.3"
+    "uuid": "3.3.3",
+    "yargs": "16.0.3"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.7",
-    "@types/html-to-text": "^1.4.31",
-    "@types/keycloak-connect": "^4.5.1",
-    "@types/mocha": "^7.0.2",
-    "@types/moment-timezone": "^0.5.10",
+    "@types/cors": "2.8.12",
+    "@types/html-to-text": "1.4.31",
+    "@types/keycloak-connect": "4.5.4",
+    "@types/mocha": "7.0.2",
+    "@types/moment-timezone": "0.5.12",
     "@types/multiparty": "0.0.32",
-    "@types/nodemailer": "^6.2.1",
-    "@types/react-select": "^3.0.5",
-    "@types/reactstrap": "^8.4.1",
-    "@types/sha.js": "^2.4.0",
-    "@types/swagger-jsdoc": "^3.0.2",
-    "@types/swagger-ui-express": "^4.1.2",
-    "@types/wordpress__wordcount": "^2.4.0",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
-    "autoprefixer": "^9.4.4",
-    "axios": "^0.21.1",
+    "@types/nodemailer": "6.2.2",
+    "@types/react-select": "3.0.8",
+    "@types/reactstrap": "8.4.1",
+    "@types/sha.js": "2.4.0",
+    "@types/swagger-jsdoc": "3.0.2",
+    "@types/swagger-ui-express": "4.1.3",
+    "@types/wordpress__wordcount": "2.4.0",
+    "@typescript-eslint/eslint-plugin": "5.5.0",
+    "@typescript-eslint/parser": "5.5.0",
+    "autoprefixer": "9.7.2",
+    "axios": "0.21.1",
     "bootstrap": "4.4.1",
-    "cssnano": "^4.1.10",
-    "envify": "^4.1.0",
-    "eslint": "^8.3.0",
-    "eslint-plugin-mocha": "^9.0.0",
-    "eslint-plugin-react": "^7.27.1",
-    "grunt": "^1.4.1",
-    "grunt-browserify": "^5.3.0",
-    "grunt-cli": "^1.3.2",
-    "grunt-concurrent": "^3.0.0",
-    "grunt-contrib-clean": "^2.0.0",
-    "grunt-contrib-compress": "^1.5.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-htmlmin": "^3.0.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-ejs": "^1.0.0",
-    "grunt-postcss": "^0.9.0",
-    "grunt-sass": "^3.0.2",
-    "grunt-shell": "^3.0.1",
-    "grunt-terser": "^0.1.0",
-    "is-relative-url": "^3.0.0",
-    "jquery": "^3.5.1",
-    "license-checker": "^25.0.1",
-    "load-grunt-tasks": "^4.0.0",
-    "markdown-toc": "^1.2.0",
-    "mocha": "^7.1.1",
-    "moment-timezone": "^0.5.23",
-    "node-sass": "7.0.x",
-    "nodemon": "^2.0.4",
-    "path-to-regexp": "^6.1.0",
-    "pathmodify": "^0.5.0",
-    "pg-doc": "^0.1.1",
-    "react-markdown": "^4.2.2",
-    "react-select": "^3.0.8",
-    "reactstrap": "^8.4.0",
-    "require-dir": "^1.2.0",
-    "serve": "^11.3.2",
-    "tslint": "^5.12.1",
-    "typedoc": "^0.15.0"
+    "cssnano": "4.1.10",
+    "envify": "4.1.0",
+    "eslint": "8.3.0",
+    "eslint-plugin-mocha": "9.0.0",
+    "eslint-plugin-react": "7.27.1",
+    "grunt": "1.4.1",
+    "grunt-browserify": "5.3.0",
+    "grunt-cli": "1.3.2",
+    "grunt-concurrent": "3.0.0",
+    "grunt-contrib-clean": "2.0.0",
+    "grunt-contrib-compress": "1.6.0",
+    "grunt-contrib-copy": "1.0.0",
+    "grunt-contrib-htmlmin": "3.1.0",
+    "grunt-contrib-watch": "1.1.0",
+    "grunt-ejs": "1.0.0",
+    "grunt-postcss": "0.9.0",
+    "grunt-sass": "3.1.0",
+    "grunt-shell": "3.0.1",
+    "grunt-terser": "0.1.1",
+    "is-relative-url": "3.0.0",
+    "jquery": "3.5.1",
+    "license-checker": "25.0.1",
+    "load-grunt-tasks": "4.0.0",
+    "markdown-toc": "1.2.0",
+    "mocha": "7.1.1",
+    "moment-timezone": "0.5.27",
+    "node-sass": "7.0.0",
+    "nodemon": "2.0.15",
+    "path-to-regexp": "6.1.0",
+    "pathmodify": "0.5.0",
+    "pg-doc": "0.1.1",
+    "react-markdown": "4.2.2",
+    "react-select": "3.0.8",
+    "reactstrap": "8.4.1",
+    "require-dir": "1.2.0",
+    "serve": "11.3.2",
+    "tslint": "5.20.1",
+    "typedoc": "0.15.3"
   }
 }
