--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -2,10 +2,10 @@ name: Create and publish app Docker image
 
 on:
   push:
-    branches:
-      - main
-    tags:
-      - "*"
+    # branches:
+    #   - main
+    # tags:
+    #   - "*"
 
 env:
   GITHUB_REGISTRY: ghcr.io
