--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -3,6 +3,8 @@ on: [push]
 jobs:
   cypress-run:
     runs-on: ubuntu-20.04
+    # stop the job if it runs over 10 minutes to prevent a hanging process from using all your CI minutes
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -10,3 +12,7 @@ jobs:
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v2
+        with:
+          build: npm run build
+          start: npm run start
+          wait-on: 'http://localhost:3000'
