--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: "3"
 services:
-  app:
-    image: dm_app_image
-    container_name: dm_app
-    build:
-      context: ././
-      dockerfile: src/front-end/Dockerfile
-    ports:
-      - "3000:3000"
-    environment:
-      POSTGRES_URL: postgresql://digitalmarketplace:digitalmarketplace@db:5432/digitalmarketplace
-      NODE_ENV: ${NODE_ENV}
-    depends_on:
-      - db
+  # app:
+  #   image: dm_app_image
+  #   container_name: dm_app
+  #   build:
+  #     context: ././
+  #     dockerfile: src/front-end/Dockerfile
+  #   ports:
+  #     - "3000:3000"
+  #   environment:
+  #     POSTGRES_URL: postgresql://digitalmarketplace:digitalmarketplace@db:5432/digitalmarketplace
+  #     NODE_ENV: ${NODE_ENV}
+  #   depends_on:
+  #     - db
 
   db:
     container_name: dm_db
