--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -11,10 +11,21 @@ jobs:
     # stop the job if it runs over 10 minutes to prevent a hanging process from using all your CI minutes
     timeout-minutes: 10
     steps:
+      # - name: asdf setup
+      #   uses: asdf-vm/actions/setup@v1
+      # - uses: actions/cache@v2
+      #   id: asdf-cache
+      #   with:
+      #     path: |
+      #       ~/.asdf
+      #     key: ${{ runner.os }}-asdf-cache-${{ hashFiles('.tool-versions') }}
       - name: Checkout
         uses: actions/checkout@v2
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
+      - name: start postgres and create database
+        run: make start_pg && make create_db
+      - run: createuser -s digitalmarketplace
+      - name: deploy migrations
+        run: npm run migrations:latest
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
