--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,8 +1,8 @@
 name: End-to-end tests
 on: [push]
 jobs:
-  cypress-run:
-    runs-on: ubuntu-20.04
+  cypress:
+    runs-on: ubuntu-latest
     env:
       POSTGRES_URL: "foobar"
       COOKIE_SECRET: "foobar"
@@ -10,25 +10,45 @@ jobs:
       MAILER_PORT: "321"
     # stop the job if it runs over 10 minutes to prevent a hanging process from using all your CI minutes
     timeout-minutes: 10
+
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres
+        # Provide the password for postgres
+        env:
+          POSTGRES_PASSWORD: digitalmarketplace
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
-      # - name: asdf setup
-      #   uses: asdf-vm/actions/setup@v1
-      # - uses: actions/cache@v2
-      #   id: asdf-cache
-      #   with:
-      #     path: |
-      #       ~/.asdf
-      #     key: ${{ runner.os }}-asdf-cache-${{ hashFiles('.tool-versions') }}
       - name: Checkout
         uses: actions/checkout@v2
-      - name: start postgres and create database
-        run: make start_pg && make create_db
-      - run: createuser -s digitalmarketplace
-      - name: deploy migrations
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Connect to PostgreSQL
         run: npm run migrations:latest
-      - name: Cypress run
-        uses: cypress-io/github-action@v2
-        with:
-          build: npm run build
-          start: npm run start
-          wait-on: 'http://localhost:3000'
+        # Environment variables used by the `client.js` script to create a new PostgreSQL table.
+        env:
+          # The hostname used to communicate with the PostgreSQL service container
+          POSTGRES_HOST: postgres
+          # The default PostgreSQL port
+          POSTGRES_PORT: 5432
+
+      - name: Cypress
+        run: npm ./node_modules/.bin/cypress run
+        # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
+      # - name: Cypress run
+      #   uses: cypress-io/github-action@v2
+      #   with:
+      #     build: npm run build
+      #     start: npm run start
+      #     wait-on: 'http://localhost:3000'
