test: update cypress CI github action--add postgres password

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -43,6 +43,7 @@ jobs:
           POSTGRES_HOST: postgres
           # The default PostgreSQL port
           POSTGRES_PORT: 5432
+          POSTGRES_PASSWORD: digitalmarketplace
 
       - name: Cypress
         run: npm ./node_modules/.bin/cypress run
