--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -20,7 +20,7 @@ jobs:
           - "5432:5432"
         # Provide the password for postgres
         env:
-          POSTGRES_PASSWORD: digitalmarketplace
+          POSTGRES_PASSWORD: postgres
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
@@ -43,7 +43,7 @@ jobs:
           POSTGRES_HOST: postgres
           # The default PostgreSQL port
           POSTGRES_PORT: 5432
-          POSTGRES_PASSWORD: digitalmarketplace
+          POSTGRES_PASSWORD: postgres
 
       - name: Cypress
         run: npm ./node_modules/.bin/cypress run
@@ -53,5 +53,5 @@ jobs:
       #   uses: cypress-io/github-action@v2
       #   with:
       #     build: npm run build
-      #     start: npm run start
+      #     start: npm run migrations,npm run start
       #     wait-on: 'http://localhost:3000'
