--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -53,7 +53,11 @@ jobs:
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v2
+        env:
+          - POSTGRES_USER: digitalmarketplace
+          - POSTGRES_PASSWORD: digitalmarketplace
+          - POSTGRES_DB: digitalmarketplace
         with:
           build: npm run build
-          start: npm run migrations,npm run start
+          start: npm run migrations:latest,npm run start
           wait-on: 'http://localhost:3000'
