--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -20,7 +20,7 @@ jobs:
           - "5432:5432"
         # Provide the password for postgres
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: digitalmarketplace
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
@@ -55,7 +55,7 @@ jobs:
         uses: cypress-io/github-action@v2
         env:
           - POSTGRES_USER: digitalmarketplace
-          - POSTGRES_PASSWORD: password
+          - POSTGRES_PASSWORD: digitalmarketplace
           - POSTGRES_DB: digitalmarketplace
         with:
           build: npm run build
