--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -20,7 +20,7 @@ jobs:
           - "5432:5432"
         # Provide the password for postgres
         env:
-          POSTGRES_PASSWORD: digitalmarketplace
+          POSTGRES_PASSWORD: postgres
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
@@ -54,7 +54,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         env:
-          - POSTGRES_USER: digitalmarketplace
+          - POSTGRES_USER: postgres
           - POSTGRES_PASSWORD: digitalmarketplace
           - POSTGRES_DB: digitalmarketplace
         with:
