--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -20,9 +20,10 @@ jobs:
           - "5432:5432"
         # Provide the password for postgres
         env:
-          POSTGRES_USER: "digitalmarketplace"
-          POSTGRES_PASSWORD: "digitalmarketplace"
-          POSTGRES_DB: "digitalmarketplace"
+          # POSTGRES_USER: "digitalmarketplace"
+          # POSTGRES_PASSWORD: "digitalmarketplace"
+          # POSTGRES_DB: "digitalmarketplace"
+          POSTGRES_PASSWORD: postgres
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
@@ -55,11 +56,15 @@ jobs:
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v2
+        # env:
+        #   POSTGRES_USER: "digitalmarketplace"
+        #   POSTGRES_PASSWORD: "digitalmarketplace"
+        #   POSTGRES_DB: "digitalmarketplace"
         env:
-          POSTGRES_USER: "digitalmarketplace"
-          POSTGRES_PASSWORD: "digitalmarketplace"
-          POSTGRES_DB: "digitalmarketplace"
-
+          # The hostname used to communicate with the PostgreSQL service container
+          POSTGRES_HOST: postgres
+          # The default PostgreSQL port
+          POSTGRES_PORT: 5432
         with:
           build: npm run build
           start: npm run migrations:latest,npm run start
