--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -4,7 +4,7 @@ jobs:
   cypress:
     runs-on: ubuntu-latest
     env:
-      POSTGRES_URL: "postgresql://digitalmarketplace:digitalmarketplace@localhost:5432/digitalmarketplace"
+      # POSTGRES_URL: "postgresql://digitalmarketplace:digitalmarketplace@localhost:5432/digitalmarketplace"
       COOKIE_SECRET: "foobar"
       MAILER_HOST: "foobar"
       MAILER_PORT: "321"
@@ -40,5 +40,6 @@ jobs:
           POSTGRES_PORT: 5432
         with:
           build: npm run build
-          start: npm run migrations:latest,npm run start
+          # start: npm run migrations:latest,npm run start
+          start: npm run start
           wait-on: 'http://localhost:3000'
