--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -44,3 +44,9 @@ jobs:
           start: npm run migrations:latest,npm run start
           # start: npm run start
           wait-on: 'http://localhost:3000'
+      - name: Upload screenshots
+        uses: actions/upload-artifact@latest
+        if: failure()
+        with:
+            name: cypress-snapshots
+            path: cypress/snapshots
