--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -45,7 +45,7 @@ jobs:
           # start: npm run start
           wait-on: 'http://localhost:3000'
       - name: Upload screenshots
-        uses: actions/upload-artifact@latest
+        uses: actions/upload-artifact@v2
         if: failure()
         with:
             name: cypress-snapshots
