--- a/package.json
+++ b/package.json
@@ -44,8 +44,36 @@
     "node": ">=16.13.1"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.16.7",
     "@keycloak/keycloak-admin-client": "^15.0.2",
-    
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/html-to-text": "^8.0.1",
+    "@types/immutable": "^3.8.7",
+    "@types/jest": "^27.4.0",
+    "@types/keycloak-connect": "^7.0.0",
+    "@types/lodash": "^4.14.178",
+    "@types/mime-types": "^2.1.1",
+    "@types/mocha": "^9.0.0",
+    "@types/moment": "^2.13.0",
+    "@types/moment-timezone": "^0.5.30",
+    "@types/multiparty": "^0.0.33",
+    "@types/node": "^17.0.8",
+    "@types/nodemailer": "^6.4.4",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-select": "^5.0.1",
+    "@types/reactstrap": "^8.7.2",
+    "@types/sha.js": "^2.4.0",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.4",
+    "@types/wordpress__wordcount": "^2.4.2",
+    "@types/yargs": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "@wordpress/wordcount": "^2.7.0",
     "body-parser": "^1.18.3",
     "bowser": "^2.9.0",
@@ -57,6 +85,7 @@
     "find-up": "^5.0.0",
     "html-to-text": "^5.1.1",
     "immutable": "^4.0.0-rc.12",
+    "jest-diff": "^27.4.6",
     "jimp": "^0.16.0",
     "keycloak-connect": "^8.0.0",
     "knex": "^0.19.3",
@@ -73,20 +102,20 @@
     "sha.js": "^2.4.11",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4",
+    "ts-jest": "^27.1.2",
     "ts-node": "^8.5.4",
     "tsconfig-paths": "^3.8.0",
+    "tslint": "^6.1.3",
     "typescript": "3.7.4",
     "uuid": "^3.3.3",
     "yargs": "^16.0.3"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^15.0.0",
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
-   
+    "@commitlint/config-conventional": "^15.0.0",
     "@testing-library/react": "^12.1.2",
-    
     "autoprefixer": "^9.4.4",
     "axios": "^0.21.1",
     "babel-jest": "^27.3.1",
@@ -95,8 +124,8 @@
     "cypress": "^9.1.1",
     "envify": "^4.1.0",
     "eslint": "^8.3.0",
-    "eslint-plugin-mocha": "^9.0.0",
     "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-mocha": "^9.0.0",
     "eslint-plugin-react": "^7.27.1",
     "grunt": "^1.4.1",
     "grunt-browserify": "^5.3.0",
